--- a/app/views/ovm-v2/current-status-loader.html
+++ b/app/views/ovm-v2/current-status-loader.html
@@ -37,8 +37,8 @@ Dashboard
 
         <thead role="rowgroup">
           <tr role="row">
-            <th scope="col" style="padding-left:20px">Immigration status from</th>
-            <th scope="col">Immigration status to</th>
+            <th scope="col" style="padding-left:20px">Start date</th>
+            <th scope="col">End date</th>
             <th scope="col">HO reference</th>
             <th scope="col">BRP number</th>
             <th scope="col">Visa type</th>
@@ -51,9 +51,9 @@ Dashboard
 
         <tbody role="rowgroup">
           <tr role="row" style="border-bottom:solid;border-width:thin;border-color: #C5C5C5;">
-            <td role="cell" style="padding-left:20px">26-Dec-2016</td>
+            <td role="cell" style="padding-left:20px">01-Jun-2020</td>
             <td role="cell">No expiry</td>
-            <td role="cell">1234567890</td>
+            <td role="cell">AM-ypGP-085c-cd7d-9e66-2</td>
             <td role="cell">Not provided</td>
             <td role="cell">EU settlement scheme</td>
             <td role="cell">Indefinite leave to remain</td>
