--- a/app/views/ovm-v2/historic-status.html
+++ b/app/views/ovm-v2/historic-status.html
@@ -42,8 +42,8 @@ Dashboard
       </thead>
 
       <tr>
-        <th scope="col" style="padding-left:20px">Immigration status from</th>
-        <th scope="col">Immigration status to</th>
+        <th scope="col" style="padding-left:20px">Start date</th>
+        <th scope="col">End date</th>
         <th scope="col">HO reference</th>
         <th scope="col">BRP number</th>
         <th scope="col">Visa type</th>
@@ -54,9 +54,9 @@ Dashboard
 
       <tbody>
         <tr style="border-bottom:solid;border-width:thin;border-color: #C5C5C5;">
-          <td style="padding-left:20px">26-Dec-2016</td>
+          <td style="padding-left:20px">01-Jun-2020</td>
           <td>No expiry</td>
-          <td>1234567890</td>
+          <td>AM-ypGP-085c-cd7d-9e66-2</td>
           <td>Not provided</td>
           <td>EU settlement scheme</td>
           <td>Indefinite leave to remain</td>
@@ -82,45 +82,31 @@ Dashboard
               <th scope="col"></th>
             </tr>
           </thead>
-        </table>
-
-        <div class="row">
-
-          <h2 style="padding-left:50px;padding-top:20px;">Search results</h2>
-        </div>
-        <div class="container-fluid">
-        <div class="row">
-          <p style="padding-left:35px;padding-top:20px;">Showing search results for 30-Mar-2016 to 30-Mar-2017:</p>
-        </div>
-      </div>
-
-        <table class="ovm-table" style="box-shadow: 0 4px 0 0 #d8dde0;">
           <tbody>
-
-            <tr style="background-color:white">
-              <th scope="col" style="padding-left:20px">Immigration status from</th>
-              <th scope="col">Immigration status to</th>
+            <tr style="height:80px;">
+              <td style="padding-left:20px;" colspan="7"><strong>Showing search results for 01-Jan-2019 to 31-Dec-2019:</strong></td>
+            </tr>
+            <tr>
+              <th scope="col" style="padding-left:20px;">Start date</th>
+              <th scope="col">End date</th>
               <th scope="col">HO reference</th>
               <th scope="col">BRP number</th>
-              <th scope="col">Visa type</th>
+              <th scope="col">Visa product</th>
               <th scope="col">Immigration status</th>
               <th scope="col">Healthcare status</th>
+
             </tr>
 
-          <tbody>
-            <tr style="border-bottom:solid;border-width:thin;border-color: #C5C5C5;">
-              <td style="padding-left:20px;">30-Mar-2016</td>
-              <td>No expiry</td>
-              <td>1234567890</td>
-              <td>Not provided</td>
-              <td>EU settlement scheme</td>
-              <td>Indefinite leave to remain</td>
-              <td>Access to free NHS services</td>
-            </tr>
-
-
-          </tbody>
-        </table>
+            <tbody>
+              <tr style="border-bottom:solid;border-width:thin;border-color: #C5C5C5;">
+                <td style="padding-left:20px; ">19-Jan-2019</td>
+                <td>31-May-2020</td>
+                <td>AM-ypGP-085c-cd7d-9e66-2</td>
+                <td>Not provided</td>
+                <td>EU settlement scheme</td>
+                <td>Leave to remain</td>
+                <td>Access to free NHS services</td>
+              </tr>
 
         <table class="ovm-table" style="box-shadow: 0 4px 0 0 #d8dde0;margin-top:0px;">
 
