--- a/app/assets/sass/components/_table.scss
+++ b/app/assets/sass/components/_table.scss
@@ -3,6 +3,7 @@
   margin:20px;
   width:100%;
   background-color:#F5F5F5;
+  // table-layout: fixed;
   tr{
     // height:50px;
     border-color: #C5C5C5;
