--- a/app/views/ovm-v2/historic-status.html
+++ b/app/views/ovm-v2/historic-status.html
@@ -42,25 +42,25 @@ Dashboard
       </thead>
 
       <tr>
-        <th scope="col" style="padding-left:20px">Start date</th>
-        <th scope="col">End date</th>
-        <th scope="col">HO reference</th>
-        <th scope="col">BRP number</th>
-        <th scope="col">Visa type</th>
-        <th scope="col">Immigration status</th>
-        <th scope="col">Healthcare status</th>
+        <th width="14%" scope="col" style="padding-left:20px">Start date</th>
+        <th width="14%" scope="col">End date</th>
+        <th width="20%" scope="col">HO reference</th>
+        <th width="14%" scope="col">BRP number</th>
+        <th width="14%" scope="col">Visa type</th>
+        <th width="14%" scope="col">Immigration status</th>
+        <th width="14%" scope="col">Healthcare status</th>
 
       </tr>
 
       <tbody>
         <tr style="border-bottom:solid;border-width:thin;border-color: #C5C5C5;">
-          <td style="padding-left:20px">01-Jun-2020</td>
-          <td>No expiry</td>
-          <td>AM-ypGP-085c-cd7d-9e66-2</td>
-          <td>Not provided</td>
-          <td>EU settlement scheme</td>
-          <td>Indefinite leave to remain</td>
-          <td>Access to free NHS services</td>
+          <td width="14%" style="padding-left:20px">01-Jun-2020</td>
+          <td width="14%">No expiry</td>
+          <td width="20%">AM-ypGP-085c-cd7d-9e66-2</td>
+          <td width="14%">Not provided</td>
+          <td width="14%">EU settlement scheme</td>
+          <td width="14%">Indefinite leave to remain</td>
+          <td width="14%">Access to free NHS services</td>
         </tr>
 
       </tbody>
@@ -87,25 +87,25 @@ Dashboard
               <td style="padding-left:20px;" colspan="7"><strong>Showing search results for 01-Jan-2019 to 31-Dec-2019:</strong></td>
             </tr>
             <tr>
-              <th scope="col" style="padding-left:20px;">Start date</th>
-              <th scope="col">End date</th>
-              <th scope="col">HO reference</th>
-              <th scope="col">BRP number</th>
-              <th scope="col">Visa product</th>
-              <th scope="col">Immigration status</th>
-              <th scope="col">Healthcare status</th>
+              <th width="14%" scope="col" style="padding-left:20px;">Start date</th>
+              <th width="14%" scope="col">End date</th>
+              <th width="20%" scope="col">HO reference</th>
+              <th width="14%" scope="col">BRP number</th>
+              <th width="14%" scope="col">Visa type</th>
+              <th width="14%" scope="col">Immigration status</th>
+              <th width="14%" scope="col">Healthcare status</th>
 
             </tr>
 
             <tbody>
               <tr style="border-bottom:solid;border-width:thin;border-color: #C5C5C5;">
                 <td style="padding-left:20px; ">19-Jan-2019</td>
-                <td>31-May-2020</td>
-                <td>AM-ypGP-085c-cd7d-9e66-2</td>
-                <td>Not provided</td>
-                <td>EU settlement scheme</td>
-                <td>Leave to remain</td>
-                <td>Access to free NHS services</td>
+                <td width="14%">31-May-2020</td>
+                <td width="20%">AM-ypGP-085c-cd7d-9e66-2</td>
+                <td width="14%">Not provided</td>
+                <td width="14%">EU settlement scheme</td>
+                <td width="14%">Leave to remain</td>
+                <td width="14%">Access to free NHS services</td>
               </tr>
 
         <table class="ovm-table" style="box-shadow: 0 4px 0 0 #d8dde0;margin-top:0px;">
