--- a/app/views/ovm-v2/historic-status.html
+++ b/app/views/ovm-v2/historic-status.html
@@ -28,17 +28,19 @@ Dashboard
 
 
     <table class="ovm-table" style="box-shadow:0 4px 0 0 #d8dde0;">
-      <thead style="background-color:#DAE7F4;border-bottom:solid;border-width:thin;border-color: #C5C5C5;">
-        <tr>
-          <th scope="col" style="color:black; padding-left:20px;">Current status</th>
-          <th scope="col"></th>
-          <th scope="col"></th>
-          <th scope="col"></th>
-          <th scope="col"></th>
-          <th scope="col"></th>
-          <th scope="col"></th>
+      <thead role="rowgroup" style="background-color:#DAE7F4;border-bottom:solid;border-width:thin;border-color: #C5C5C5;">
+        <tr role="row">
+          <th role="columnheader" scope="col" style="color:black; padding-left:20px;" colspan="5">Current status</th>
+          <th colspan="2">
+            <div class="action-link">
+              <span><a href="#" style="padding-left:180px;padding-right:10px;">
+                    Read guidance
+                  </a><img  src="/images/plus_symbol.svg"></span>
+            </div>
+          </th>
 
         </tr>
+
       </thead>
 
       <tr>
